tests/NormalTests/paczka1/small_fuzzy/38745478.err
Error in line 1: S4 S4 32,0
Error in line 3: S4 A136 64,2
Error in line 5: S4 S4 27,2
Error in line 8: S4 S4 33,5
Error in line 2: IEvF2KNygj A136 26,2
